Added github link

--- a/eda/eda.ipynb
+++ b/eda/eda.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Submitted on: **22.03.2024**\n",
     "\n",
-    "Github:"
+    "Github: https://github.com/usermar445/thesis"
    ],
    "metadata": {
     "collapsed": false
